[package]
name = "scantron"
version = "0.1.0"
authors = ["Quinn Romanek <quinnromanek@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
async-process = "2.2.4"
clap = { version = "4.5.16", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
itertools = "0.13.0"
junit-parser = "1.2.4"
ratatui = "0.28.1"
throbber-widgets-tui = "0.7.0"
tokio = { version = "1.39.3", features = ["full"] }
tui-clap = "0.2.0"
tui-tree-widget = "0.22.0"
